css/style.css
/* ... */
.clients .titlepage {padding-bottom: 30px;}
.clients_slider .carousel-caption {position: inherit;}
.carousel-indicators .active {background: #ecc161;}
.carousel-indicators li {
    background: #000000;
    width: 20px;
    height: 20px;     
}



.img_box {
   display: flex;
   align-content: center;
   align-items: center;
}
.pa_rile {
    padding-left: 0;
    padding-right: 0;
}
.img_box i img {padding-right: 25px; display: inline-block; width: 65px;}
.img_box figure {margin: 0;}

.img_box::after {
   position: absolute;
content: "";
right: -23px;
transform: rotate(5deg);
width: 46px;
background: url(../images/4.png);
background-repeat: no-repeat;
height: 146px;
top: 92px;

}
.joe {
   text-align: left;
}
.joe h3 {
    font-size: 20px; 
    line-height: 20px; 
    color: #f0ca6c; 
    font-weight: bold;
    padding: 0px 0px 20px 30px;
}

.joe p {
  color: #fff;
display: inline-block;
padding: 25px;
background: #000;
margin-bottom: 30px;
}
.carousel-control-next-icon, .carousel-control-prev-icon {display: none;}
.carousel-indicators {
   left: inherit;
   margin-right: 0;
   bottom: 60px;
}

/** end clients **/

/** footer **/
.footer {
    background: #eec668;
    padding-top: 90px;
}
.call_now2 h3 {
font-size: 30px;
line-height: 40px;
color: #fff;
padding-bottom: 33px;
    
}
.call_now2 span {
    font-size: 31px;
    line-height: 30px;
    font-weight: bold;
    color: #000;
}

.call_now {
   float: right;
   letter-spacing: 3px;
}

.call_now h3 {
    font-size: 40px;
line-height: 40px;
font-weight: 700;
color: #000;
padding-bottom: 33px;
    
}
.call_now span {
    font-size: 45px;
    line-height: 35px;
    font-weight: bold;
    color: #fff;
}
.copyright {
background:url(../images/cop.jpg);
padding: 25px 0px;
margin-top: 55px;
background-repeat: no-repeat;
background-size: cover;
background-position: center;
}
.copyright p {
    color: #000;
    font-size: 18px;
    line-height: 22px;
    text-align: center;
   
}
.copyright a {
   color: #000;
}
.copyright a:hover {
    color: #fff; 
}
/** end footer **/
/*--------------------------------------------------------------------- ener page css ---------------------------------------------------------------------*/
.about-bg {
    background-color: #ad2100;
    margin-bottom: 90px;
}
.about-bg .abouttitle h2 {
    color: #fff;
    text-transform: uppercase;
    font-size: 40px;
    line-height: 45px;
    padding: 40px 0;
    font-weight: 500;
    text-align: center;
}
.Currency-bg {
    background-color: #ad2100;
}
.Currency-bg .abouttitle h2 {
    color: #fff;
    text-transform: uppercase;
    font-size: 40px;
    line-height: 45px;
    padding: 40px 0;
    font-weight: 500;
    text-align: center;
}
.Request-bg {
    background-color: #ad2100;
}
.Request-bg .abouttitle h2 {
    color: #fff;
    text-transform: uppercase;
    font-size: 40px;
    line-height: 45px;
    padding: 40px 0;
    font-weight: 500;
    text-align: center;
}
.Team-bg {
    background-color: #ad2100;
}
.Team-bg .abouttitle h2 {
    color: #fff;
    text-transform: uppercase;
    font-size: 40px;
    line-height: 45px;
    padding: 40px 0;
    font-weight: 500;
    text-align: center;
}

.whats-app {
     position: fixed;
     width: 50px;
     height: 50px;
     bottom: 40px;
     background-color: #25d366;
     color: #FFF;
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
     box-shadow: 3px 4px 3px #999;
     left: 15px;
     z-index: 100;
 }
 
 .my-float {
     margin-top: 10px;
 }

